# parquet-http

./: Cargo.toml  README.md
examples/: arrow2.rs  datafusion.rs  parquet.rs  polars.rs
src/: main.rs
